fix: Music Player Bottom overflowing

--- a/frontend/css/brainzplayer.less
+++ b/frontend/css/brainzplayer.less
@@ -421,7 +421,7 @@
   display: flex;
   flex-direction: column;
   right: 0;
-  bottom: -100%;
+  bottom: -100vh;
   transition: bottom 0.6s cubic-bezier(0.46, 0.75, 0.55, 0.97);
   padding: 0 1.5em;
   padding-bottom: @brainzplayer-height + @progress-bar-height;
